@@ -141,6 +141,9 @@ int main(void)
 "GSList* g_slist_append		(GSList		*list,\n"
 "				 gpointer	 data);\n"
 "\n"
+"GSList* g_slist_prepend	(GSList		*list,\n"
+"				 gpointer	 data);\n"
+"\n"
 "GSList* g_slist_remove		(GSList		*list,\n"
 "				 gpointer	 data);\n"
 "\n"
